re PR c++/59766 (c++1y: declaring friend function with 'auto' return type deduction is rejected with bogus reason)

PR c++/59766
	* decl.c (grokdeclarator): Do not flag friends with deduced return.

From-SVN: r222365